--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,20 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://source.unsplash.com/random');">
+    <div class="banner-container">
+      <h1><strong>Join thousands who are picking up new sports everyday!</strong></h1>
+      <p>Search for a sport now</p>
+
+          <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+            <div class="search-form-control form-group">
+              <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+              <button name="button" type="submit" class="btn btn-flat">
+                <i class="fas fa-search"></i> Search
+              </button>
+            </div>
+          <% end %>
+
+    </div>
+  </div>
+
+</div>
