set up of user model and permit new parameters

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,6 +20,7 @@
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :date_of_birth,
+                html5: true,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "Date of Birth" }%>
