added additional user fields to edit page

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,10 @@
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
-
+    <%= f.input :name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "name" }%>
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
@@ -21,6 +24,15 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    <%= f.input :date_of_birth,
+                html5: true,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "Date of Birth" }%>
+    <%= f.input :contact_number,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "Contact Number" }%>
   </div>
 
   <div class="form-actions">
