updated user model and user edit form

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,7 +10,7 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
     <%= f.input :name,
-                required: true,
+                required: false,
                 autofocus: true,
                 input_html: { autocomplete: "name" }%>
     <%= f.input :password,
@@ -22,15 +22,15 @@
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
                 hint: "we need your current password to confirm your changes",
-                required: true,
+                required: false,
                 input_html: { autocomplete: "current-password" } %>
     <%= f.input :date_of_birth,
                 html5: true,
-                required: true,
+                required: false,
                 autofocus: true,
                 input_html: { autocomplete: "Date of Birth" }%>
     <%= f.input :contact_number,
-                required: true,
+                required: false,
                 autofocus: true,
                 input_html: { autocomplete: "Contact Number" }%>
   </div>
