--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,4 +17,6 @@
     </div>
   </div>
 
+  <%= cl_image_tag("fsoqf2gix2loj2ocqtis.jpg", width: 400, height: 300, crop: :fill) %>
+  <%= cl_image_tag("r2fhdkwjnrbvlwajrkb2.jpg", width: 150, height: 150, crop: :thumb, gravity: :face) %>
 </div>
