added profile pic upload to new and edit form

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -33,6 +33,10 @@
                 required: false,
                 autofocus: true,
                 input_html: { autocomplete: "Contact Number" }%>
+    <%= f.input :photo, as: :file,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "Profile Picture" }%>
   </div>
 
   <div class="form-actions">
