--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,6 +28,10 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "Contact Number" }%>
+    <%= f.input :photo, as: :file,
+                required: false,
+                autofocus: true,
+                input_html: { autocomplete: "Profile Picture" }%>
   </div>
 
   <div class="form-actions">
