Edited coach lessons controller, views and some css

--- a/app/views/coach/lessons/_form.html.erb
+++ b/app/views/coach/lessons/_form.html.erb
@@ -1,4 +1,5 @@
-<%= simple_form_for(@lesson) do |f|%>
+<%= simple_form_for(@lesson, method: :post, url: :coach_lessons
+) do |f|%>
     <%= f.input :start_date_time, :as => :datetime %>
     <%= f.input :end_date_time, :as => :datetime %>
     <%= f.input :location %>
