--- a/app/views/coach/lessons/new.html.erb
+++ b/app/views/coach/lessons/new.html.erb
@@ -1,1 +1,11 @@
-<%= render "form" %>
+<div class='container form'>
+  <h2 class='header'>New lesson</h2>
+  <%= simple_form_for(@lesson, method: :post, url: :coach_lessons) do |f|%>
+      <%= f.input :start_date_time, :as => :datetime %>
+      <%= f.input :end_date_time, :as => :datetime %>
+      <%= f.input :description %>
+      <%= f.input :location %>
+      <%= f.input :price, as: :numeric %>
+      <%= f.submit class:'btn btn-primary' %>
+  <% end %>
+</div>
