--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -10,6 +10,7 @@
   padding-top: 8px;
   padding-bottom: 8px;
   transition: 0.3s ease;
+  animation: slide-down 300ms ease-out forwards;
 }
 
 // .lesson-card:hover {
@@ -62,4 +63,16 @@
   font-size: 10px;
   border-radius: 50px;
   padding: 2px 28px;
+}
+
+
+@keyframes slide-down {
+  from {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
