--- a/app/views/coach/lessons/index.html.erb
+++ b/app/views/coach/lessons/index.html.erb
@@ -1,21 +1,29 @@
 <div class='container'>
-  <ul>
+  <%= link_to('New Lesson', new_coach_lesson_path, class:"header btn btn-primary ") %>
     <% @lessons.each do |lesson| %>
-      <li>
-        <p><%= lesson.start_date_time%></p>
-        <p><%= lesson.end_date_time%></p>
-        <p><%= lesson.location%></p>
-        <p><%= lesson.price%></p>
-        <% if lesson.students %>
-          <p><%= lesson.students%></p>
-        <% end %>
-        <%= link_to('New Lesson', new_coach_lesson_path) %>
-        <%= link_to('Edit', edit_coach_lesson_path) %>
-        <%= link_to "Delete",
-                    coach_lesson_path(@lesson),
-                    method: :delete,
-                    data: { confirm: "Are you sure?" } %>
-      </li>
+      <div class="lesson-card">
+        <div class="lesson-date">
+          <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
+          <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
+          <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
+        </div>
+
+        <div class="lesson-details">
+          <strong>Class</strong>
+          <% if lesson.student_id %>
+            <span>Student: <%= lesson.student.name %></span>
+          <% end %>
+          <span>Location: <%= lesson.location %></span>
+        </div>
+
+        <div class='lesson-buttons'>
+          <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-outline-secondary btn-sm") %>
+          <%= link_to "Delete",
+                      coach_lesson_path(lesson),
+                      method: :delete,
+                      data: { confirm: "Are you sure?" },
+                      class: "btn btn-outline-secondary btn-sm" %>
+        </div>
+      </div>
     <% end %>
-  </ul>
-<div>
+</div>
