--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,21 +12,21 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Home", root_path, class: "nav-link active" %>
+          <%= link_to "Home", root_path, class: "nav-link #{"active" if current_page?(root_path)}" %>
         </li>
         <li class="nav-item">
-            <%= link_to "My Lessons", lessons_path, class: "nav-link" %>
+            <%= link_to "My Lessons", lessons_path, class: "nav-link #{"active" if current_page?(lessons_path)}" %>
         </li>
         <% if current_user.coach_profile %>
           <li class="nav-item">
-            <%= link_to "Coach Lessons", coach_lessons_path, class: "nav-link" %>
+            <%= link_to "Coach Lessons", coach_lessons_path, class: "nav-link #{"active" if current_page?(coach_lessons_path)}" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Coach Profile", user_coach_profile_path(current_user, current_user.coach_profile), class: "nav-link" %>
+            <%= link_to "Coach Profile", user_coach_profile_path(current_user, current_user.coach_profile), class: "nav-link #{"active" if current_page?(user_coach_profile_path(current_user, current_user.coach_profile))}" %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Create Coach Profile", new_user_coach_profile_path(current_user), class: "nav-link" %>
+            <%= link_to "Create Coach Profile", new_user_coach_profile_path(current_user), class: "nav-link #{"active" if current_page?(new_user_coach_profile_path(current_user))}" %>
           </li>
         <% end %>
         <li class="nav-item dropdown">
