--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
               </button>
             </div>
           <% end %>
-
+          <%= link_to "See all our Sports", sports_path, class:"btn btn-flat" %>
     </div>
   </div>
 
