--- a/app/views/coach_profiles/_form.html.erb
+++ b/app/views/coach_profiles/_form.html.erb
@@ -1,13 +1,15 @@
-<%= simple_form_for [ user, coach_profile ] do |f| %>
-  <%= f.input :coach_start_date %>
-  <%= f.input :description %>
-  <%= f.association :sport %>
-  <%= f.association :user,
-  :as => :hidden, :input_html => { :value => current_user.id }  %>
+<div class='form'>
+  <%= simple_form_for [ user, coach_profile ] do |f| %>
+    <%= f.input :coach_start_date %>
+    <%= f.input :description %>
+    <%= f.association :sport %>
+    <%= f.association :user,
+    :as => :hidden, :input_html => { :value => current_user.id }  %>
 
-  <% if @exists %>
-  <%= f.submit ("Update") %>
-  <% else %>
-  <%= f.submit ("Create") %>
+    <% if @exists %>
+    <%= f.submit ("Update") %>
+    <% else %>
+    <%= f.submit ("Create") %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
