Added coach page (for user to view), and upload coach_profile photo

--- a/app/views/coach_profiles/_form.html.erb
+++ b/app/views/coach_profiles/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :coach_start_date %>
   <%= f.input :description %>
   <%= f.association :sport %>
+  <%= f.input :photo, as: :file %>
   <%= f.association :user,
   :as => :hidden, :input_html => { :value => current_user.id }  %>
 
