--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -1,3 +1,7 @@
-coach page
+<h2>Coach name: <%= @coach.name %></h2>
+<h2>Coach profile description: <%= @coach.coach_profile.description %></h2>
+<h2>Coach's sport: <%= @coach.coach_profile.sport.name %></h2>
+<%= cl_image_tag @coach.coach_profile.photo.key, height: 300, width: 400, crop: :fill %>
 
-<%= link_to "See Lessons", list_lessons_coach_path(@coach) %>
+
+<%= link_to "See All Coach's Lessons", list_lessons_coach_path(@coach), class: "btn btn-primary" %>
