--- a/app/views/coach_profiles/edit.html.erb
+++ b/app/views/coach_profiles/edit.html.erb
@@ -1,2 +1,4 @@
-<%= render "form", coach_profile: @coach_profile, user: @user %>
-
+<div class='form container'>
+  <h1 class='header'>Sign up as a coach</h1>
+  <%= render "form", coach_profile: @coach_profile, user: @user %>
+</div>
