--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,14 +1,19 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "https://artprojectsforkids.org/wp-content/uploads/2021/05/Draw-a-Soccer-Ball.jpg.webp" %>
-  <% end %>
-
+  <div class='flex'>
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "https://artprojectsforkids.org/wp-content/uploads/2021/05/Draw-a-Soccer-Ball.jpg.webp" %>
+    <% end %>
+    <% if user_signed_in? %>
+      <h3>Hello, <%= current_user.name %></h3>
+    <% end %>
+  </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
@@ -32,7 +37,7 @@
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            Logged in as: <%= current_user.name %>
+            <div class='dropdown-item'>Logged in: <strong><%= current_user.name %></strong></div>
             <%= link_to "Action", "#", class: "dropdown-item" %>
             <%= link_to "Another action", "#", class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
