--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <h1><strong>Join thousands who are picking up new sports everyday!</strong></h1>
       <p>Search for a sport now</p>
 
-          <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+          <%= simple_form_for :search, url: sports_path, method: :get do |f| %>
             <div class="search-form-control form-group">
               <input class="form-control string required" type="text" name="search[query]" id="search_query" />
               <button name="button" type="submit" class="btn btn-flat">
