--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -2,9 +2,16 @@
   margin: 1rem 0;
 }
 
+.header-flex {
+  display: flex;
+  justify-content: space-between;
+}
+
 .form {
   animation: appear 500ms ease-in;
 }
+
+
 
 @keyframes appear {
   from {
