--- a/app/views/coach/lessons/edit.html.erb
+++ b/app/views/coach/lessons/edit.html.erb
@@ -1,5 +1,8 @@
 <div class='container form'>
-  <h2 class='header'>Edit lesson</h2>
+  <div class='header header-flex'>
+    <h2>Edit lesson</h2>
+    <%= link_to "Back", :back, class:"btn btn-flat" %>
+  </div>
   <%= simple_form_for(@lesson, method: :patch, url: coach_lesson_path) do |f|%>
       <%= f.input :start_date_time, :as => :datetime %>
       <%= f.input :end_date_time, :as => :datetime %>
