--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,8 @@
 <div class='container form'>
-<h2 class='header'>Forgot your password?</h2>
+ <div class='header header-flex'>
+    <h2>Forget your password?</h2>
+    <%= link_to "Back", :back, class:"btn btn-flat" %>
+  </div>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
