--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
 <div class='container form'>
-<h2 class='header'>Sign up</h2>
+ <div class='header header-flex'>
+    <h2>Sign Up</h2>
+    <%= link_to "Back", :back, class:"btn btn-flat" %>
+  </div>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
