Added toggle switch in navbar for coach/student

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,3 +29,13 @@
 .nav-link {
   margin: 0 .5rem;
 }
+
+.hide {
+  display: none;
+}
+
+.custom-switch {
+  padding-top: 8px;
+  padding-right: 8px;
+  font-size: 12px;
+}
