--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,14 +19,14 @@
         <li class="nav-item">
           <%= link_to "Home", root_path, class: "nav-link #{"active" if current_page?(root_path)}" %>
         </li>
-        <li class="nav-item my-lessons">
+        <li class="nav-item my-lessons-btn">
             <%= link_to "My Lessons", lessons_path, class: "nav-link #{"active" if current_page?(lessons_path)}" %>
         </li>
         <% if current_user.coach_profile %>
-          <li class="nav-item">
+          <li class="nav-item coach-lessons-btn hide">
             <%= link_to "Coach Lessons", coach_lessons_path, class: "nav-link #{"active" if current_page?(coach_lessons_path)}" %>
           </li>
-          <li class="nav-item">
+          <li class="nav-item coach-profile-btn hide">
             <%= link_to "Coach Profile", user_coach_profile_path(current_user, current_user.coach_profile), class: "nav-link #{"active" if current_page?(user_coach_profile_path(current_user, current_user.coach_profile))}" %>
           </li>
           <li class="nav-item">
