--- a/app/assets/stylesheets/components/_lessons.scss
+++ b/app/assets/stylesheets/components/_lessons.scss
@@ -10,7 +10,7 @@
   padding-top: 8px;
   padding-bottom: 8px;
   transition: 0.3s ease;
-  animation: slide-down 300ms ease-out forwards;
+  // animation: slide-down 300ms ease-out forwards;
 }
 
 // .lesson-card:hover {
@@ -52,7 +52,7 @@
 // }
 
 .lesson-status.booked {
-  background: lightgray;
+  // background: lightgray;
   font-size: 10px;
   border-radius: 50px;
   padding: 2px 16px;
@@ -66,7 +66,7 @@
 }
 
 .lesson-card-status.booked {
-  background: lightgrey;
+  background: rgb(255, 254, 254);
 }
 
 .lesson-header-links {
@@ -85,15 +85,39 @@
   padding: .5rem;
   color: black;
 
-  &:hover {
+   &:hover {
     text-decoration: none;
     color: black;
+   }
+  &::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 1.5px;
+    background: black;
+    transition: width .4s ease-in;
+  }
+  &:hover::after{
+    width: 100%;
   }
 }
 
-.lesson-header-link.active {
-  border-bottom: 2px solid black;
+.modal:hover {
+  background-color: none;
 }
+
+  // &::after {
+  //   content: '';
+  //   display: block;
+  //   width: 0;
+  //   height: 1px;
+  //   background: #000;
+  //   transition: width .4s ease-in;
+  // }
+
+  // &:hover::after{
+  //   width: 100%;
+  // }
 
 
 @keyframes slide-down {
