--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -3,7 +3,7 @@
   <div class='lesson-header-links'>
     <%= link_to('All', coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(coach_lessons_path)}") %>
     <%= link_to('Upcoming', upcoming_coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(upcoming_coach_lessons_path)}") %>
-    <%= link_to('History', past_coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(past_coach_lessons_path)}") %>
+    <%= link_to('History', history_coach_lessons_path, class:"lesson-header-link #{"active" if current_page?(history_coach_lessons_path)}") %>
   </div>
     <% if @lessons.empty? %>
       <div class='lesson-header-links'><h4>No lessons available</h4></div>
@@ -24,7 +24,25 @@
           <span>Location: <%= lesson.location %></span>
         </div>
 
+        <%# dropdown ************************************* %>
         <div class='lesson-buttons'>
+         <div class="btn btn-outline-secondary btn-sm" id="navbarDropdown" data-toggle="dropdown" aria-haspopup='true' aria-expanded='false'>Details(Dropdown)</div>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <div class='dropdown-item'>
+              <p>Coach: <%= lesson.coach.name %></p>
+              <p>Student: <%= lesson.student.name %></p>
+              <p>Date/Time: <%= lesson.coach.name %></p>
+              <p>Price: $<%= lesson.price %>/hr</p>
+              <p>Status: <%= lesson.status %></p>
+              <p>Description: <%= lesson.description %></p>
+            </div>
+          </div>
+
+          <%# modal button************************ %>
+          <button type="button" class="btn btn-outline-secondary btn-sm"" data-toggle="modal" data-target="#exampleModal">
+            Details (Modal)
+          </button>
+
           <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-outline-secondary btn-sm") %>
           <%= link_to "Delete",
                       coach_lesson_path(lesson),
@@ -33,5 +51,32 @@
                       class: "btn btn-outline-secondary btn-sm" %>
         </div>
       </div>
+
+
+    <%# modal*********************** %>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Lesson Details</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+             <p>Coach: <%= lesson.coach.name %></p>
+              <p>Student: <%= lesson.student.name %></p>
+              <p>Date/Time: <%= lesson.coach.name %></p>
+              <p>Price: $<%= lesson.price %>/hr</p>
+              <p>Status: <%= lesson.status %></p>
+              <p>Description: <%= lesson.description %></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <% end %>
 </div>
