--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -1,4 +1,5 @@
 $primary-color: #1A237E;
+$primary-dark-color: #141a5c;
 $secondary-color: #3D5A80;
 $accent-color:#EE6C4D;
 $danger-color: #A10000;
