--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -9,13 +9,12 @@
       <div class='lesson-header-links'><h4>No lessons available</h4></div>
     <% end %>
     <% @lessons.each do |lesson| %>
-      <div class="lesson-card <%= 'lesson-card-status booked' if lesson.status %>">
+      <div class="lesson-card <%= lesson.status ? 'border-green' : 'border-black' %>">
         <div class="lesson-date">
           <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
           <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
           <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
-        </div>
-
+      </div>
         <div class="lesson-details">
           <strong>Class</strong>
           <% if lesson.student_id %>
@@ -24,23 +23,9 @@
           <span>Location: <%= lesson.location %></span>
         </div>
 
-        <%# dropdown ************************************* %>
-        <div class='lesson-buttons'>
-         <div class="btn btn-outline-secondary btn-sm" id="navbarDropdown" data-toggle="dropdown" aria-haspopup='true' aria-expanded='false'>Details(Dropdown)</div>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <div class='dropdown-item'>
-              <p>Coach: <%= lesson.coach.name %></p>
-              <p>Student: <%= lesson.student.name %></p>
-              <p>Date/Time: <%= lesson.coach.name %></p>
-              <p>Price: $<%= lesson.price %>/hr</p>
-              <p>Status: <%= lesson.status %></p>
-              <p>Description: <%= lesson.description %></p>
-            </div>
-          </div>
-
           <%# modal button************************ %>
-          <button type="button" class="btn btn-outline-secondary btn-sm"" data-toggle="modal" data-target="#exampleModal">
-            Details (Modal)
+          <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#exampleModal">
+            Details
           </button>
 
           <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-outline-secondary btn-sm") %>
@@ -58,21 +43,32 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Lesson Details</h5>
+            <h5 class="modal-title" id="exampleModalLabel"><%= lesson.coach.sport.name.capitalize %> Lesson <span>
+             <% if lesson.status %>
+                (Booked)
+              <% else %>
+                (Not Booked)
+              <% end %></span></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-             <p>Coach: <%= lesson.coach.name %></p>
-              <p>Student: <%= lesson.student.name %></p>
-              <p>Date/Time: <%= lesson.coach.name %></p>
-              <p>Price: $<%= lesson.price %>/hr</p>
-              <p>Status: <%= lesson.status %></p>
-              <p>Description: <%= lesson.description %></p>
+              <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%-d.%I%p") %> - <%= lesson.end_date_time.strftime("%-d.%I%p") %> </p>
+              <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
+              <p><strong>Student:</strong>
+              <% if lesson.student %>
+                <%= lesson.student.name %>
+              <% else %>
+                No student
+              <% end %>
+              </p>
+              <p><strong>Price:</strong> $<%= lesson.price %>/hr</p>
+              <p><strong>Description:</strong> <%= lesson.description %></p>
+
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <%= link_to('Edit', edit_coach_lesson_path(lesson), class: "btn btn-primary") %>
           </div>
         </div>
       </div>
