--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,22 +13,26 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Home", root_path, class: "nav-link #{"active" if current_page?(root_path)}" %>
+          <%= link_to "Home", root_path, class: "nav-link  #{"active" if current_page?(root_path)}" %>
         </li>
-        <li class="nav-item my-lessons-btn">
-            <%= link_to "My Lessons", lessons_path, class: "nav-link #{"active" if current_page?(lessons_path)}" %>
+        <li class="nav-item">
+            <%= link_to "My Lessons", lessons_path, class: "nav-link  my-lessons-btn #{"hide" if current_page?(coach_lessons_path)} #{"hide" if current_page?(user_coach_profile_path(current_user, current_user.coach_profile))} #{"active" if current_page?(lessons_path)}" %>
         </li>
         <% if current_user.coach_profile %>
-          <li class="nav-item coach-lessons-btn hide">
-            <%= link_to "Coach Lessons", coach_lessons_path, class: "nav-link #{"active" if current_page?(coach_lessons_path)}" %>
+          <li class="nav-item">
+            <%= link_to "Coach Lessons", coach_lessons_path, class: "nav-link coach-lessons-btn #{"hide" if current_page?(lessons_path)} #{"hide" if current_page?(root_path)} #{"active" if current_page?(coach_lessons_path)}" %>
           </li>
-          <li class="nav-item coach-profile-btn hide">
-            <%= link_to "Coach Profile", user_coach_profile_path(current_user, current_user.coach_profile), class: "nav-link #{"active" if current_page?(user_coach_profile_path(current_user, current_user.coach_profile))}" %>
+          <li class="nav-item">
+            <%= link_to "Coach Profile", user_coach_profile_path(current_user, current_user.coach_profile), class: "nav-link coach-profile-btn #{"hide" if current_page?(lessons_path)} #{"hide" if current_page?(root_path)} #{"active" if current_page?(user_coach_profile_path(current_user, current_user.coach_profile))}" %>
           </li>
           <li class="nav-item">
             <div class="custom-control custom-switch">
-              <input type="checkbox" class="custom-control-input" id="customSwitch1">
+              <input type="checkbox" class="custom-control-input" id="customSwitch1" >
+              <% if params[:controller] == 'lessons' || params[:controller] == 'pages'  %>
               <label class="custom-control-label" for="customSwitch1"><span id="toggleLabel">Student</span></label>
+              <% else %>
+              <label class="custom-control-label" for="customSwitch1"><span id="toggleLabel">Coach</span></label>
+              <% end %>
             </div>
           </li>
         <% else %>
@@ -36,6 +40,7 @@
             <%= link_to "Create Coach Profile", new_user_coach_profile_path(current_user), class: "nav-link #{"active" if current_page?(new_user_coach_profile_path(current_user))}" %>
           </li>
         <% end %>
+
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
