--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,7 +24,7 @@
 }
 
 .nav-link {
-  margin: 0 .5rem;
+  margin: 0;
   color: white !important;
 
   &::after {
@@ -46,6 +46,10 @@
     height: 1.5px;
     background: white;
   }
+
+  // &.active {
+  //   background-color: $primary-dark-color;
+  // }
 }
 
 .hide {
