--- a/app/views/coach_profiles/show.html.erb
+++ b/app/views/coach_profiles/show.html.erb
@@ -1,11 +1,34 @@
-<h1>Coach Profile Page</h1>
 
-<h2>User name: <%= @user.name %></h2>
-<h2>Coach profile description: <%= @coach_profile.description %></h2>
-<h2>Coach's sport: <%= @coach_profile.sport.name %></h2>
-<%= cl_image_tag @coach_profile.photo.key, height: 300, width: 400, crop: :fill %>
+<div class="container">
+  <div class="user-information m-2 p-2">
+    <div class="profile d-flex">
+      <div class="profile-picture m-2 p-2">
+        <img src="https://via.placeholder.com/150" alt="">
+      </div>
+      <div class="profile-description  m-2 p-2">
+        <h2>Coach Profile Page</h2>
+        <h3>User name: <%= @user.name %></h3>
+        <p>Coach profile description: <%= @coach_profile.description %></p>
+        <p>Coach's sport: <%= @coach_profile.sport.name %></p>
+      </div>
+    </div>
+    <div class="image-container d-flex p-2 m-2">
+      <div class="images">
+        <img src="https://via.placeholder.com/150" alt="">
+        <img src="https://via.placeholder.com/150" alt="">
+        <img src="https://via.placeholder.com/150" alt="">
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="user-action">
+    <%= link_to 'edit', edit_user_coach_profile_path, class: "btn btn-primary"  %>
 
+    <%= link_to "Delete",
+                          user_path(current_user),
+                          method: :delete,
+                          data: { confirm: "Are you sure?" },
+                          class: "btn btn-danger" %>
 
-<%= link_to 'edit', edit_user_coach_profile_path, class: "btn btn-primary"  %>
-
-<%= link_to 'lessons', lessons_path, class: "btn btn-primary" %>
+  </div>
+</div>
