--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -7,7 +7,7 @@
     <% if @sports.count > 0 %>
       <div class="sport-cards">
         <% @sports.each do |sport| %>
-          <div class="border text-center sport-card" style="background-image: url(<%= url_for(sport.picture_url) %>);">
+          <div class="border text-center sport-card" style="background-image: url(<%= cl_image_path(sport.picture_url) %>);">
             <%= link_to sport.name.capitalize, sport_coaches_path(sport) %>
           </div>
         <% end %>
