--- a/app/views/coach_profiles/_form.html.erb
+++ b/app/views/coach_profiles/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :coach_start_date %>
   <%= f.input :description %>
   <%= f.association :sport %>
-  <%= f.input :photo, as: :file %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
   <%= f.association :user,
   :as => :hidden, :input_html => { :value => current_user.id }  %>
     <% if @exists %>
