--- a/app/assets/stylesheets/components/_root.scss
+++ b/app/assets/stylesheets/components/_root.scss
@@ -1,6 +1,9 @@
-$primary-color: #1A237E;
-$primary-dark-color: #141a5c;
-$secondary-color: #3D5A80;
+// $primary-color: #1A237E;
+$primary-color: #FC6B26;
+$primary-light-color: #FDAB83;
+$primary-dark-color: #fa590f;
+$secondary-color: #1EDD88;
+$secondary-dark-color: #1BCB7F;
 $accent-color:#EE6C4D;
 $danger-color: #A10000;
 $background-color:#E0FBFC;
@@ -13,5 +16,9 @@ $background-color:#E0FBFC;
 }
 
 :root {
-  font-size: 15px;
+  font-size: 16px;
+}
+
+.container {
+  margin-bottom: 1rem;
 }
