--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,18 +4,25 @@
   color: $primary-color;
 }
 
-
-
 .header-flex {
   display: flex;
   justify-content: space-between;
 }
 
-.form {
+// .form {
+//   animation: appear 500ms ease-in;
+//   background-color: white;
+//   padding: 1rem;
+// }
+
+.form
+{
+  margin-top: 1rem;
   animation: appear 500ms ease-in;
+  background-color: white;
+  padding: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
-
-
 
 @keyframes appear {
   from {
